--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/src/assets/dracaena.png" />
+    <link href="https://fonts.cdnfonts.com/css/andika-new-basic" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dracaenaa's Personal Site</title>
+    <title>Dracaenaa</title>
   </head>
   <body>
     <div id="app"></div>
